PUSH NOTE : 68-95-99.7 rule.md

--- a/content/Concepts/68-95-99.7 rule.md
+++ b/content/Concepts/68-95-99.7 rule.md
@@ -15,7 +15,7 @@ The **68–95–99.7 rule** or **empirical rule** is a shorthand for remembering
 
 ![[../assets/normal_dist_68_rule.jpg|600]]
 
-- **68%** of values fall within **1** [[standard deviation|standard deviation]] of the [[mean|mean]]
+- **68%** of values fall within **1** [[./variance and standard deviation|variance]] of the [[mean|mean]]
 - **95%** of values fall within **2** standard deviations of the mean
 - **99.7%** of values fall within **3** standard deviations of the mean
 
